<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.card.newkalkulator.fragment.FragmentLoanCalculator">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="1"
        android:stretchColumns="1">
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/amperMetr"
                android:layout_column="0"
                android:textSize="20dp"
                android:textColor="#bf360c"
                style="@style/ButtonText"/>

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/shcala1" />

            <EditText
                android:id="@+id/etNam"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal">

                <requestFocus></requestFocus>
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/shcala" />

            <EditText
                android:id="@+id/etNam1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal">

                <requestFocus></requestFocus>
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/deleniya" />

            <EditText
                android:id="@+id/etNam2"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow>

            <TextView
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/watt"
                android:layout_column="0"
                android:textSize="20dp"
                android:textColor="#bf360c"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cos f"
                android:id="@+id/checkBox"
                android:layout_column="1"
                android:checked="false" />


        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/wattmetr2" />

            <EditText
                android:id="@+id/etNam20"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/wattmetr" />

            <EditText
                android:id="@+id/etNam21"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/wattmetr1" />

            <EditText
                android:id="@+id/etNam22"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/wattmetr11" />

            <EditText
                android:id="@+id/etNam23"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/volt"
                android:layout_column="0"
                android:textSize="20dp"
                android:textColor="#bf360c"
                style="@style/ButtonText"/>

        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/volt0" />

            <EditText
                android:id="@+id/volt30"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/volt1" />

            <EditText
                android:id="@+id/volt31"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/wattmetr1" />

            <EditText
                android:id="@+id/volt32"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="Посчитать"
                android:background="@drawable/roundrect"
                style="@style/ButtonText"/>
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/resAmper" />

            <TextView
                android:id="@+id/tvResultSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="#6200ff"
                android:textSize="16sp"/>
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/resWat" />

            <TextView
                android:id="@+id/result2Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="#4400ff"
                android:textSize="16sp"/>
        </TableRow>
        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/resVolt" />

            <TextView
                android:id="@+id/result3Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="#4400ff"
                android:textSize="16sp"/>
        </TableRow>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000dff"
                android:textSize="20sp"
                android:text=""
                android:layout_marginLeft="44dp"
                android:layout_marginStart="44dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

    </TableLayout>

</ScrollView>